# haskell-bayesian

./: README.md  haskell-bayesian.cabal
src/: Lib.hs
src/Bayesian/: BayesianNetwork.hs  CheckedError.hs  Factor.hs  Variable.hs
src/Bayesian/Inference/: VariableElimination.hs
test/: FactorTestSuite.hs  GraphTests.hs  TestSuite1.hs  VariableEliminationTestSuite.hs
