name:                haskell-bayesian
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/sebassimoes/haskell-bayesian#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bayesian.Factor
                     , Bayesian.Variable
                     , Bayesian.CheckedError
                     , Bayesian.BayesianNetwork
                     , Bayesian.Inference.VariableElimination
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , mtl
  default-language:    Haskell2010

test-suite factors-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             FactorTestSuite.hs
  build-depends:       base
                     , haskell-bayesian
                     , containers
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite variable-elimination-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             VariableEliminationTestSuite.hs
  build-depends:       base
                     , haskell-bayesian
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite graphs-test
    type:                exitcode-stdio-1.0
    hs-source-dirs:      test
    main-is:             GraphTests.hs
    build-depends:       base
                       , containers
                       , fgl
                       , graphviz
    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sebassimoes/haskell-bayesian
